implement all project, all clusters page
